--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
-<body>
+    <meta charset="utf-8">
+    <title>Doduodrio</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="frog-king-pixilart.gif" rel="icon">
+  </head>
+  <body>
     <div class="webpage">
     <header><div class="header">
       <img src="corn maze pixilart.gif" alt="Corn Maze gif" title="The Frog King welcomes you!">
