--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   padding: 16px;
   text-align: center;
   background: #14692f;
+  color: #95c27e;
 }
 .header a:link, .header a:visited {
   color: #95c27e;
@@ -47,11 +48,13 @@ body {
 }
 .content {
   margin-left: 248px;
+  margin-right: 8%;
   padding-top: 1em;
   padding-left: 2em;
   padding-right: 2em;
   padding-bottom: 3em;
-  text-align: justify;
+  text-align: left;
+  line-height: 1.5;
 }
 .content h1, .content h2 {
   font-family: 'Courier New', Courier, monospace
@@ -68,8 +71,13 @@ body {
   color: black;
 }
 .important {
+  margin: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-variant: small-caps;
   font-weight: bold;
   text-align: center;
+}
+.thumbnail {
+  height: 250px;
+  width: auto;
 }
