--- a/style.css
+++ b/style.css
@@ -35,13 +35,14 @@ body {
 .sidebar h2 {
   border-bottom: 2px solid black;
 }
-.sidebar a:link, .sidebar a:visited {
+.sidebar a {
   display: block;
+}
+a:link, a:visited {
   color: black;
   text-decoration: none;
 }
-.sidebar a:hover, .sidebar a:active, .sidebar a:focus {
-  display: block;
+a:hover, a:active, a:focus {
   color: white;
   background: black;
   text-decoration: none;
